tests/NormalTests/paczka1/small_fuzzy/51430356.err
Error in line 8: lrjqc S822 88,7
Error in line 13: lrjqc A910 44,6
